add leading zeros to timer, add game lapsetime to game over stats

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                     <span>Total Points
                         <span class="points">0000</span>
                     </span>
+                    <br>
+                    <span>Total Time
+                        <span class="timer">00:00:00</span>s
+                    </span>
                 </div>
                 <button>BACK HOME</button>
             </div>
