fix players images path

--- a/index.html
+++ b/index.html
@@ -62,31 +62,31 @@
             <ul class="player-menu" id="playersList">
                 <li>
                     <figure class="img-wrapper isSelected">
-                        <img src="/images/char-boy.png" alt="Image of Boy Player">
+                        <img src="images/char-boy.png" alt="Image of Boy Player">
                         <figcaption>Boy</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure class="img-wrapper">
-                        <img src="/images/char-princess-girl.png" alt="Image of Princess Girl Player">
+                        <img src="images/char-princess-girl.png" alt="Image of Princess Girl Player">
                         <figcaption>Princess Girl</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure class="img-wrapper">
-                        <img src="/images/char-cat-girl.png" alt="Image of Cat Girl Player">
+                        <img src="images/char-cat-girl.png" alt="Image of Cat Girl Player">
                         <figcaption>Cat Girl</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure class="img-wrapper">
-                        <img src="/images/char-horn-girl.png" alt="Image of Horn Girl Player">
+                        <img src="images/char-horn-girl.png" alt="Image of Horn Girl Player">
                         <figcaption>Horn Girl</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure class="img-wrapper">
-                        <img src="/images/char-pink-girl.png" alt="Image of Pink Girl Player">
+                        <img src="images/char-pink-girl.png" alt="Image of Pink Girl Player">
                         <figcaption>Pink Girl</figcaption>
                     </figure>
                 </li>
